--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
+    scroll-padding-top: 5rem;
+    scroll-behavior: smooth;
 }
 
 header {
@@ -25,6 +27,8 @@ header a{
     text-transform: uppercase;
     font-weight: bold;
     letter-spacing: 2px;
+    padding: 0.5rem;
+    border-radius: 5px;
 
 }
 
@@ -44,9 +48,14 @@ header a:hover {
 section{
     border: 1px solid black;
     height: calc(100vh - 5rem);
+    padding: 3rem;
 }
 
-#Listas{
-    margin-top: 5rem;
+#listas{
+    margin-top: 4rem;
 
+}
+
+section h2{
+    text-align: center;
 }
